# vello-phoenix

./: AUTHORS  Cargo.toml  LICENSE-MIT  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
catalina/: Cargo.toml
catalina/src/: debug.rs  lib.rs  recording.rs  render.rs  scene.rs  shaders.rs  util.rs  wgpu_engine.rs
catalina/src/debug/: renderer.rs  validate.rs
catalina/src/scene/: bitmap.rs
catalina_encoding/: Cargo.toml
catalina_encoding/src/: binning.rs  clip.rs  config.rs  draw.rs  encoding.rs  estimate.rs  glyph.rs  glyph_cache.rs  image_cache.rs  lib.rs  mask.rs  math.rs  monoid.rs  path.rs  ramp_cache.rs  resolve.rs
catalina_shaders/: Cargo.toml  build.rs
catalina_shaders/shader/: backdrop.wgsl  backdrop_dyn.wgsl  bbox_clear.wgsl  binning.wgsl  clip_leaf.wgsl  clip_reduce.wgsl  coarse.wgsl  draw_leaf.wgsl  draw_reduce.wgsl  fine.wgsl  flatten.wgsl  path_count.wgsl  path_count_setup.wgsl  path_tiling.wgsl  path_tiling_setup.wgsl  pathtag_reduce.wgsl  pathtag_reduce2.wgsl  pathtag_scan.wgsl  pathtag_scan1.wgsl  tile_alloc.wgsl
catalina_shaders/shader/shared/: bbox.wgsl  blend.wgsl  bump.wgsl  clip.wgsl  config.wgsl  cubic.wgsl  drawtag.wgsl  pathtag.wgsl  ptcl.wgsl  segment.wgsl  tile.wgsl  transform.wgsl  util.wgsl
catalina_shaders/src/: cpu.rs  lib.rs  types.rs
catalina_shaders/src/compile/: mod.rs  msl.rs  permutations.rs  preprocess.rs
catalina_shaders/src/cpu/: backdrop.rs  bbox_clear.rs  binning.rs  clip_leaf.rs  clip_reduce.rs  coarse.rs  draw_leaf.rs  draw_reduce.rs  euler.rs  fine.rs  flatten.rs  path_count.rs  path_count_setup.rs  path_tiling.rs  path_tiling_setup.rs  pathtag_reduce.rs  pathtag_scan.rs  tile_alloc.rs  util.rs
catalina_tests/: Cargo.toml  build.rs
catalina_tests/src/: compare.rs  lib.rs  snapshot.rs
catalina_tests/tests/: compare_gpu_cpu.rs  emoji.rs  known_issues.rs  property.rs  regression.rs  smoke_snapshots.rs  snapshot_test_scenes.rs
examples/headless/: Cargo.toml
examples/headless/src/: main.rs
examples/run_wasm/src/: main.rs
examples/scenes/: Cargo.toml
examples/scenes/src/: images.rs  lib.rs  mmark.rs  pico_svg.rs  simple_text.rs  svg.rs  test_scenes.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/simple_sdl2/: Cargo.toml
examples/simple_sdl2/src/: main.rs
examples/with_winit/: Cargo.toml
examples/with_winit/src/: hot_reload.rs  lib.rs  main.rs  multi_touch.rs  stats.rs
vello/src/: wgpu_engine.rs
vune/: Cargo.toml  README.md
vune/src/: lib.rs
